# porcupette

./: Cargo.toml  README.md  porcupette.desktop  rustcupine.desktop
src/: config.rs  main.rs  util.rs
