[package]
name = "porcupette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
copypasta = "0.8"
eyre = "0.6"
rustyline = "10"
dirs = "4"
execute = "0.2"
